# touchdesigner-mcp

./: CLAUDE.md  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml
scripts/: smoke_test.py
td_component/: touchdesigner_mcp.tox  webserver_callbacks.py
touchdesigner_mcp/: server.py
